# VanEps

./: .gitignore  CMakeLists.txt  LICENSE
src/Notes/: Notes.cpp  Notes.hpp
test/: catch.hpp  fakeit.hpp
test/Notes/: NoteTests.cpp
